# orbit-pm

./: .gitignore  .mcp.json  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
commands/: done.md  go.md  mode.md  new.md  prompts.md  rename.md  save.md
docs/: architecture.md  dashboard.md  hooks.md  installation.md  mcp-tools.md  orbit-auto.md  statusline.md
hooks/: __init__.py  activity_tracker.py  hooks.json  pre_compact.py  session_start.py  stop.py  task_tracker.py
hooks/tests/: test_hooks.py
mcp-server/: LICENSE  README.md  pyproject.toml
mcp-server/src/mcp_orbit/: __init__.py  active_task.py  app.py  config.py  db.py  errors.py  helpers.py  iteration_log.py  models.py  orbit.py  server.py  tasks_parse.py  tools_active.py  tools_docs.py  tools_iteration.py  tools_planning.py  tools_tasks.py  tools_tracking.py
mcp-server/src/mcp_orbit/templates/: __init__.py  context.md  plan.md  tasks.md
mcp-server/tests/: conftest.py  test_active_task.py  test_errors.py  test_helpers.py  test_iteration_log.py  test_models.py  test_orbit_files.py  test_orbit_pure.py  test_rename.py  test_repo_resolution.py  test_tasks_parse.py  test_tools_active.py  test_tools_tasks_format.py
orbit-auto/: CLAUDE.md  README.md  pyproject.toml
orbit-auto/orbit_auto/: __init__.py  __main__.py  claude_runner.py  cli.py  code_reviewer.py  dag.py  db_logger.py  display.py  init_task.py  models.py  parallel.py  plan_validator.py  runnable.py  sequential.py  state.py  task_parser.py  worker.py  worktree.py
orbit-auto/orbit_auto/templates/: __init__.py
orbit-auto/tests/: conftest.py  test_claude_runner.py  test_dag.py  test_models.py  test_plan_validator.py  test_runnable.py  test_state.py  test_task_parser.py
orbit-dashboard/: CLAUDE.md  README.md  index.html  migrate_to_duckdb.py  pyproject.toml  requirements.txt  server.py
orbit-dashboard/lib/: analytics_db.py  config.py  jsonl_parser.py
orbit-dashboard/orbit_dashboard/: __init__.py  cli.py  index.html  server.py  statusline.py
orbit-dashboard/orbit_dashboard/lib/: __init__.py  analytics_db.py
orbit-dashboard/scripts/: seed_demo_data.py
orbit-dashboard/tests/: conftest.py  test_analytics_parse.py  test_cli.py  test_config.py  test_jsonl_parser.py  test_rename_endpoint.py  test_statusline_io.py  test_statusline_pure.py
orbit-db/: README.md  pyproject.toml
orbit-db/orbit_db/: __init__.py  __main__.py
orbit-db/tests/: conftest.py  test_format_utils.py  test_heartbeats.py  test_legacy_guard.py  test_rename.py  test_task_discovery.py  test_taskdb_crud.py
orbit-install/: README.md  pyproject.toml
orbit-install/orbit_install/: __init__.py  __main__.py  command_clients.py  installers.py  mcp_clients.py  prereqs.py  settings.py  state.py  subprocess_utils.py  ui.py  wizard.py
orbit-install/tests/: conftest.py  test_cli.py  test_command_clients.py  test_installers.py  test_mcp_clients.py  test_settings.py  test_state.py  test_subprocess_utils.py  test_ui.py  test_wizard.py
rules/: orbit.md
statusline/: statusline-launcher.sh  statusline.py
statusline/tests/: conftest.py  test_statusline_io.py  test_statusline_pure.py
templates/: task-context.md  task-plan.md  tasks.md
user-commands/: optimize-prompt.md  whats-new.md
