[project]
name = "mcp-orbit"
version = "0.2.5"
description = "MCP server for the orbit Claude Code plugin: project management with time tracking"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Tomer Brami", email = "tomerbrami@gmail.com"}
]
keywords = ["claude-code", "orbit", "mcp", "model-context-protocol", "task-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "orbit-db>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/tomerbr1/claude-orbit"
Repository = "https://github.com/tomerbr1/claude-orbit"
Issues = "https://github.com/tomerbr1/claude-orbit/issues"

[project.scripts]
mcp-orbit = "mcp_orbit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_orbit"]
