[project]
name = "orbit-db"
version = "1.0.0"
description = "SQLite-based task and time tracking for Claude Code orbit system"
requires-python = ">=3.11"
authors = [
    {name = "Tom Brami"}
]

[project.scripts]
orbit-db = "orbit_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbit_db"]
