[project]
name = "orbit-db"
version = "1.0.0"
description = "SQLite-based task and time tracking database for the orbit Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Tomer Brami", email = "tomerbrami@gmail.com"}
]
keywords = ["claude-code", "orbit", "task-tracking", "time-tracking", "sqlite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/tomerbr1/claude-orbit"
Repository = "https://github.com/tomerbr1/claude-orbit"
Issues = "https://github.com/tomerbr1/claude-orbit/issues"

[project.scripts]
orbit-db = "orbit_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbit_db"]
